--- a/style.css
+++ b/style.css
@@ -119,7 +119,6 @@ h2 {
 }
 
 .event-pics{
-margin-top: 10%;
 display: grid;
 grid-template-columns: 20% 20% 20% 20% ;
 justify-content: space-between;  
@@ -361,51 +360,61 @@ li{
 
 
 
-@media screen and (max-width:959px) {
+@media screen and (max-width:800px) {
 
-  .item2{
-    width: 100px;
-  }
-
-  .item3{
-    width: 100px;
-  }
-
- .left-img{
-   width:100px;
- }
-
- .left-p{
-   width: 100px;
- }
-
- .right-img{
-  width:100px;
+.events-main-right{
+  display: grid;
+  grid-template-columns:none;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
-.right-p{
-  width: 100px;
-}
+  .event-pics{
+   display: grid;
+   grid-template-columns:none;
+    }
+
+    #imgTextGrid{
+      margin: 1em;
+    }
+    #imgSize1{
+      width: 300px;
+      border:2px solid #921;
+      margin-right: 1px;
+    }
+
+    #pieceOfLove{
+      position: absolute;
+      line-height: 30px;
+      margin-left: 1em;
+    
+    }
 
 }
 
-@media screen and (max-width:640px){
-  .left-img{
-    width:100px;
+@media screen and (max-width:360px){
+
+  .events-main-right{
+    display: grid;
+    grid-template-columns:none;
+    
   }
- 
-  .left-p{
-    width: 100px;
-  }
- 
-  .right-img{
-   width:100px;
- }
- 
- .right-p{
-   width: 100px;
- }
+  
+    .event-pics{
+     display: grid;
+     grid-template-columns:none;
+      }
+
+      #imgTextGrid{
+        margin: 1em;
+      }
+      #imgSize1{
+        width: 300px;
+        border:2px solid #921;
+        margin-right: 1px;
+      }
  
 }
+
 
 
